@@ -1,3 +1,7 @@
+drkns 08.07.2016 09:12:06 +0200 - build 4739
+
+1. 0003265: Не работает "cd \ " в командной строке
+
 drkns 06.07.2016 23:04:32 +0200 - build 4738
 
 1. Coverity warnings.
